# openframe-oss-tenant

./: %USERPROFILE%\.mavenrc  .dockerignore  .gitignore  AGENT_PERMISSIONS_FIX.md  CLAUDE.md  CLIENT_DEBUG_FIXES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVICE_DETAILS_SLIDER.md  DEVICE_DETAILS_SLIDER_REFACTOR.md  DEVICE_MODEL_PROPOSAL.md  DEVICE_POPUP_ENHANCEMENT.md  EVENT_UNIFICATION.md  FIX_K3D.md  FIX_MESHCENTRAL_MONGO.md  FIX_SSO.md  FLEET_ACTIVITIES_STREAM.md  K3D-FIX-TASKS.md  LICENSE  LICENSE.md  MESHCENTRAL_FIX.md  MESHCENTRAL_NODEID.md  MESH_CERTIFICATE_FIX.md  MONGODB_MIGRATION.md  README.md  SECURITY.md  Settings.vue  TASK-LIST.md  TASKS.md  apps-integrated-tools-datasuorces.sh  auth-server-routing-strategy.md  cassandra-schema.cql  docker-compose.openframe-authentik.yml  docker-compose.openframe-fleet-mdm.yml  docker-compose.openframe-infrastructure.yml  docker-compose.openframe-meshcentral.yml  docker-compose.openframe-microservices.yml  docker-compose.openframe-nats.yml  docker-compose.openframe-tactical-rmm.yml  docker-compose.yaml  (+22 more)
agent/: Cargo.toml  velopack.json
agent/assets/: Info.plist  openframe.entitlements
agent/config/: agent.toml
agent/infrastructure/meshcentral/: nix_darwin_installer.sh  win.ps1
agent/infrastructure/tactical-rmm/: Fix-GetInstalledSoftwareMethod.ps1  Skip-GetInstalledSoftware.ps1  Test-AgentExecutable.ps1  build_agent_linux.sh  build_agent_msi.ps1  (+10 more)
agent/scripts/: build-package.sh  deploy.sh  install.sh  post-install.sh  post-update.sh  pre-update.sh
agent/src/: lib.rs  main.rs  service.rs  system.rs  updater.rs
(+3614 files in other folders)
